# codex-maintainer-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  maintenance.md
.github/workflows/: tests.yml
docs/: BEGINNER_GUIDE.ja.md  BEGINNER_GUIDE.md  CODEX_FOR_OSS_APPLICATION.md  PUBLISHING_CHECKLIST.md  RELEASE_WORKFLOW.md  START_HERE.ja.md  START_HERE.md  USE_CASES.ja.md  USE_CASES.md
docs/superpowers/plans/: 2026-06-15-audit-command.md  2026-06-15-review-command.md
examples/: CODEX_REVIEW.example.md  CODEX_TASKS.example.md  CODEX_TASKS.generated.md  MAINTAINER_BRIEF.example.md  MAINTAINER_BRIEF.generated.md  OSS_MAINTENANCE_AUDIT.generated.md  codex-maintainer-kit.toml
schema/: codex-tasks.schema.json
src/codex_maintainer_kit/: __init__.py  audit.py  cli.py  config.py  renderer.py  review.py  scanner.py  tasks.py
tests/: test_audit.py  test_cli.py  test_config.py  test_public_examples.py  test_renderer.py  test_review.py  test_scanner.py  test_tasks.py
